--- a/pages/style.css
+++ b/pages/style.css
@@ -1,16 +1,11 @@
-.gallery-containers-style {
+@import url("https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #f9f9f9;
+  font-family: "Source Serif 4", serif;
 }
-
-/* img {
-  width: 200px;
-  height: auto;
-} */
-
-/* .color-palette {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-} */
 
 .comment-text-input {
   border: none;
@@ -40,4 +35,18 @@
   flex-direction: column;
   padding-bottom: 10px;
   gap: 5px;
+}
+
+.dots {
+  display: flex;
+  width: 100%;
+  align-self: center;
+  padding: 5px;
+  margin-top: 20px;
+  border-top: 2px dashed #eeeeee;
+  flex-wrap: wrap;
+}
+
+li {
+  list-style-type: none;
 }
