--- a/pages/style.css
+++ b/pages/style.css
@@ -14,6 +14,8 @@ body {
   padding: 20px 40px;
   background-color: #f0f0f0;
   border-radius: 10px;
+  font-family: "Albert Sans", sans-serif;
+  font-size: 16px;
 }
 
 .comment-button {
@@ -25,8 +27,12 @@ body {
   background-color: #008080;
   color: #ffffff;
   padding: 15px;
+  padding-left: 50px;
+  padding-right: 50px;
   border-radius: 10px;
-  font-family: "Times New Roman", Times, serif;
+  margin: 10px;
+  border: none;
+  cursor: pointer;
 }
 
 .form-container {
@@ -49,4 +55,9 @@ body {
 
 li {
   list-style-type: none;
+}
+
+a {
+  color: #008080;
+  text-decoration: none;
 }
