--- a/pages/style.css
+++ b/pages/style.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  background-color: rgb(59, 64, 66)
 } */
 
 .comment-text-input {
